[tool.poetry]
name = "jwt-authentication"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
